power: fix broken abs_to_percentage() logic

(value < min) and (value > max) will *always* fail, and this function
will always return -1.

https://bugzilla.gnome.org/show_bug.cgi?id=671505